exports[`Property Card render renders ADD Card correctly 1`] = `
<div
  className="sc-bdVaJa iCYPYs">
  <div
    className="sc-bwzfXH dPdlNW">
    <div
      className="sc-htpNat hEJORb"
      color={undefined}>
      <img
        alt="agency logo"
        src={undefined} />
    </div>
    <div
      className="sc-bxivhb joAUuA">
      <img
        alt="property pic"
        src="https://i2.au.reastatic.net/640x480/5e84d96722dda3ea2a084d6935677f64872d1d760562d530c3cabfcb7bcda9c2/main.jpg" />
    </div>
    <div
      className="sc-ifAKCX gGVqaz">
      <span>
        Price: 
        $526,500
      </span>
      <button
        className="sc-EHOje idPPtx"
        disabled={false}
        onClick={[Function]}>
        Add
      </button>
    </div>
  </div>
</div>
`;

exports[`Property Card render renders REMOVE Card correctly 1`] = `
<div
  className="sc-bdVaJa iCYPYs">
  <div
    className="sc-bwzfXH dPdlNW">
    <div
      className="sc-htpNat hEJORb"
      color={undefined}>
      <img
        alt="agency logo"
        src={undefined} />
    </div>
    <div
      className="sc-bxivhb joAUuA">
      <img
        alt="property pic"
        src="https://i2.au.reastatic.net/640x480/5e84d96722dda3ea2a084d6935677f64872d1d760562d530c3cabfcb7bcda9c2/main.jpg" />
    </div>
    <div
      className="sc-ifAKCX gGVqaz">
      <span>
        Price: 
        $526,500
      </span>
      <button
        className="sc-EHOje idPPtx"
        disabled={undefined}
        onClick={[Function]}>
        Remove
      </button>
    </div>
  </div>
</div>
`;

exports[`Property Card render renders SAVED Card correctly 1`] = `
<div
  className="sc-bdVaJa iCYPYs">
  <div
    className="sc-bwzfXH dPdlNW">
    <div
      className="sc-htpNat hEJORb"
      color={undefined}>
      <img
        alt="agency logo"
        src={undefined} />
    </div>
    <div
      className="sc-bxivhb joAUuA">
      <img
        alt="property pic"
        src="https://i2.au.reastatic.net/640x480/5e84d96722dda3ea2a084d6935677f64872d1d760562d530c3cabfcb7bcda9c2/main.jpg" />
    </div>
    <div
      className="sc-ifAKCX gGVqaz">
      <span>
        Price: 
        $526,500
      </span>
      <button
        className="sc-EHOje idPPtx"
        disabled={false}
        onClick={[Function]}>
        Saved
      </button>
    </div>
  </div>
</div>
`;
